Include/generated/outlets.h

// 🍞 bin/widgeteer/bindings_generator/bindings_generator.dart:117
// === GENERATED BY `widgeteer bindings generate` === DO NOT EDIT ===
// === Follow the breadcrumbs to find what code generated what you're reading ===
#import "../types.h"

// Outlet emitted by 'Text' binding (Instance of 'WidgetBinding')
extern void register_new_text(Dart_Handle (*outlet)(char* key, char* data));
// Outlet emitted by 'Column' binding (Instance of 'WidgetBinding')
extern void register_new_column(Dart_Handle (*outlet)(char* key, int mainAxisAlignment, int mainAxisSize, int crossAxisAlignment, widgeteer_handles_list children));
// Outlet emitted by 'RunApp' binding (Instance of 'FunctionBinding')
extern void register_run_app(void (*outlet)(Dart_Handle app));
// Outlet emitted by 'Directionality' binding (Instance of 'WidgetBinding')
extern void register_new_directionality(Dart_Handle (*outlet)(char* key, int textDirection, Dart_Handle child));
// Outlet emitted by 'Center' binding (Instance of 'WidgetBinding')
extern void register_new_center(Dart_Handle (*outlet)(char* key, Dart_Handle child));
// Outlet emitted by 'MaterialApp' binding (Instance of 'WidgetBinding')
extern void register_new_material_app(Dart_Handle (*outlet)(char* key, char* title, Dart_PersistentHandle theme, Dart_Handle home));
// Outlet emitted by 'ThemeData' binding (Instance of 'PersistentObjectBinding')
extern void register_new_theme_data(Dart_Handle (*outlet)(int primarySwatch));
// Outlet emitted by 'TextButton' binding (Instance of 'WidgetBinding')
extern void register_new_text_button(Dart_Handle (*outlet)(char* key, void* onPressed, Dart_Handle child));
// Outlet emitted by 'AppBar' binding (Instance of 'WidgetBinding')
extern void register_new_app_bar(Dart_Handle (*outlet)(char* key, Dart_Handle title));
// Outlet emitted by 'StatelessUserWidget' binding (Instance of 'WidgetBinding')
extern void register_new_stateless_user_widget(Dart_Handle (*outlet)(char* key, widgeteer_stateless_user_widget_proxy proxy, char* swiftWidgetName));