Include/generated/declarations.h

// 🍞 bin/widgeteer/bindings_generator/bindings_generator.dart:103
// === GENERATED BY `widgeteer bindings generate` === DO NOT EDIT ===
// === Follow the breadcrumbs to find what code generated what you're reading ===
#import "../types.h"

// 🍞 bin/widgeteer/bindings/callback.dart:175
typedef void* widgeteer_void_callback_proxy;
void widgeteer_void_callback_proxy_release(widgeteer_void_callback_proxy proxy);
void widgeteer_void_callback_proxy_call(widgeteer_void_callback_proxy proxy);